Revert "#3: try to fix 100vh for hero header on mobile"
This reverts commit ec8aae336dc1639d97bfc047317493d5034638ab.

--- a/website/src/assets/scss/_hero.scss
+++ b/website/src/assets/scss/_hero.scss
@@ -3,12 +3,7 @@
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh; /* fall-back */
-  height: -moz-available;
-  height: -webkit-fill-available;
-  height: fill-available;
-
-
+  height: 100vh;
   background: url("../img/hero-bg.png") bottom center;
   background-size: cover;
 
@@ -44,7 +39,6 @@
     margin-bottom: 50px;
     font-size: 26px;
     font-family: $font-secondary;
-
     span {
       color: $white;
       padding-bottom: 4px;
